--- a/FinalClient/pom.xml
+++ b/FinalClient/pom.xml
@@ -35,5 +35,11 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20131018</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
